Version 7.2.3
-------------

- Accept `Throwable` instances as parameter to `Raven.sendException`.

Version 7.2.2
-------------

- Fix ServerName configuration in ``raven-log4j``.

Version 7.2.1
-------------

- Drop dependency on Guava.

Version 7.2.0
-------------

- Add printfStyle option to JUL integration. (thanks giilby)
- Updated Log4j2 documentation to refer to the Thread Context rather than the MDC. (thanks grobmeier)
- Fix duplicate ShutdownHook warnings in ``raven-log4j2``.
- Add way to override how remote addresses are resolved (RemoteAddressResolver interface). (thanks j-fernandes)
- Add way to set ``serverName`` statically in configuration. (thanks mattbillenstein)

Version 7.1.0
-------------

- Use RavenFactory's class loader when creating the service loader, fixing some issues in containers. (thanks exell-christopher)
- Add ``release`` property to ``raven-log4j``. (thanks molaschi)
- Add ``release`` property to JUL integration and ``raven-log4j2``.
- Add setters for ``dsn`` and ``tags`` in JUL integration, fixes integration with WildFly. (thanks giilby)


Version 7.0.0
-------------

- Changed Maven groupId to ``com.getsentry``