@@ -2,6 +2,7 @@ Version 7.2.3
 -------------
 
 - Accept `Throwable` instances as parameter to `Raven.sendException`.
+- Remove default `WARNING` filter level for the Logback appender.
 
 Version 7.2.2
 -------------
